compileout.txt
Waf: Entering directory `/home/cs118/CS118-Project-SimpleBT/build'
[ 6/16] Compiling src/main.cpp
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:55:18: error: aggregate ‘std::fstream metaFile’ has incomplete type and cannot be defined
     std::fstream metaFile;
                  ^
../src/main.cpp:56:28: error: incomplete type ‘std::fstream {aka std::basic_fstream<char>}’ used in nested name specifier
     metaFile.open(argv[1], std::fstream::in);
                            ^
../src/main.cpp:62:5: error: expected ‘;’ before ‘}’ token
     }
     ^
../src/main.cpp:69:13: warning: unused variable ‘pieceLength’ [-Wunused-variable]
     int64_t pieceLength = metainfo.getPieceLength(); // number of pieces
             ^
../src/main.cpp:72:13: warning: unused variable ‘length’ [-Wunused-variable]
     int64_t length = metainfo.getLength(); // length of file
             ^

Waf: Leaving directory `/home/cs118/CS118-Project-SimpleBT/build'
Build failed
 -> task in 'SimpleBT' failed (exit status 1): 
	{task 139759801625040: cxx main.cpp -> main.cpp.1.o}
['/usr/bin/g++', '-std=c++0x', '-std=c++11', '-pedantic', '-Wall', '-O2', '-g', '-I/home/cs118/CS118-Project-SimpleBT/build/src', '-I/home/cs118/CS118-Project-SimpleBT/src', '-I/home/cs118/CS118-Project-SimpleBT/build', '-I/home/cs118/CS118-Project-SimpleBT', '-I/usr/include', '../src/main.cpp', '-c', '-o', '/home/cs118/CS118-Project-SimpleBT/build/src/main.cpp.1.o']
